--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,135 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');
 
+/*-- controler ---*/
+/* *{
+  outline: 1px solid red;
+ } */
+
 body {
   font-family: 'Josefin Sans', sans-serif;
 }
+/*--- NAVIGATION BAR ---*/
 
+header {
+  /* height: 200px; */
+  position: absolute;
+  color: #fff;
+  top: 0;
+  left: 0;
+  background: rgb(0, 98, 98);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 98, 98, 1) 0%,
+    rgba(0, 139, 139, 1) 100%
+  );
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: space-around;
+}
+
+.logo {
+  display: inline;
+  font-family: 'Josefin Sans', sans-serif;
+  margin-left: 115px;
+  color: #fff;
+}
+.logo:hover {
+  color: rgb(190, 190, 190);
+  text-decoration: none;
+}
+
+header .add-btn {
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  line-height: 50px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+header .add-btn:hover {
+  color: rgb(190, 190, 190);
+  text-decoration: none;
+}
+
+header nav {
+  float: right;
+}
+
+header nav ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+header nav ul li {
+  list-style: none;
+}
+
+header nav ul li .a-link {
+  height: 50px;
+  line-height: 50px;
+  padding: 0 20px;
+  color: rgb(63, 63, 63);
+  text-decoration: none;
+  display: block;
+}
+header nav ul li .a-link:hover,
+header nav ul li .a-link.active {
+  color: rgb(226, 226, 226);
+  text-decoration: none;
+  background: rgb(93, 93, 93);
+}
+
+.menu-toggle {
+  color: #fff;
+  float: right;
+  line-height: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  display: none;
+}
+.menu-toggle:hover {
+  color: rgb(190, 190, 190);
+}
+
+@media (max-width: 991px) {
+  header {
+    padding: 0 20px;
+  }
+  .menu-toggle {
+    display: inline;
+  }
+  header nav {
+    position: absolute;
+    width: 100%;
+    height: calc(100vh - 50px);
+    background: rgb(255, 255, 255);
+    top: 50px;
+    left: -100%;
+    transition: 0.5s;
+  }
+
+  .header:hover #close:active + ul > li.a-link {
+    display: none;
+  }
+
+  header nav.active {
+    left: 0;
+  }
+  header nav ul {
+    display: block;
+    text-align: center;
+  }
+  header nav ul li .a-link {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+}
+
+
+/*--- NAVIGATION BAR ---*/
 /*--- LOGIN PAGE ---*/
 .form-wrapper {
   background-color: rgb(235, 253, 253);
@@ -15,7 +141,7 @@ body {
 .page-container {
   font-family: 'Josefin Sans', sans-serif;
   padding: 10px;
-  color: darkgrey; 
+  color: darkgrey;
 }
 
 .input-higinn {
@@ -28,13 +154,12 @@ body {
   color: darkcyan;
   border: none;
   background: none;
-  text-transform: uppercase; 
+  text-transform: uppercase;
 }
 
 .submit-btn:hover {
   color: rgb(6, 66, 66);
 }
-
 
 /*--- LOGIN PAGE ---*/
 
@@ -67,7 +192,7 @@ body {
   justify-content: center;
 }
 
-.welcome+p{
+.welcome + p {
   font-family: 'Josefin Sans', sans-serif;
   font-style: italic;
   color: darkcyan;
@@ -75,11 +200,11 @@ body {
   margin: 15px;
 }
 
-#header{
-  width:100%; 
-  background: url("./static/map.png");
+#header {
+  width: 100%;
+  background: url('./static/map.png');
   background-position: center;
-  
+
   background-size: cover;
 }
 
@@ -87,23 +212,21 @@ body {
   height: 25px;
   width: 25px;
   margin: 10px;
-  background: url("./static/huginn-log.png");
+  background: url('./static/huginn-log.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-
-#headerContent{
-  margin: 0 auto; width: 960px;
+#headerContent {
+  margin: 0 auto;
+  width: 960px;
 }
 
 .map {
-  
-  
   height: 200px;
   width: 100%;
-  margin: 10px;
+
 }
 .button_mem {
   background-color: darkcyan;
@@ -147,7 +270,6 @@ body {
   height: auto;
 }
 
-
 /* --------------------------- */
 .button_cont {
   margin: 40px;
@@ -156,7 +278,7 @@ body {
   border-radius: 4px;
   background: linear-gradient(to right, #67b26b, #4ca2cb) !important;
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   text-transform: uppercase;
   font-size: 22px;
