--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,25 @@
   outline: 1px solid red;
  } */
 
+ hr.style-seven {
+  overflow: visible; /* For IE */
+  height: 30px;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px 0 0 0;
+  border-radius: 20px;
+}
+hr.style-seven:before { /* Not really supposed to work, but does */
+  display: block;
+  content: "";
+  height: 30px;
+  margin-top: -31px;
+  border-style: solid;
+  border-color: black;
+  border-width: 0 0 1px 0;
+  border-radius: 20px;
+}
+
 body {
   font-family: 'Josefin Sans', sans-serif;
 }
@@ -346,7 +365,7 @@ header nav ul li .a-link.active {
 }
 
 /*--- MY PLACES LIST ---*/
-/*--- INFO PAGE ---*/
+/*--- SELING POINTS PAGE ---*/
 h6 {
   margin: 0;
 }
@@ -363,24 +382,99 @@ h6 + p {
   font-family: 'Josefin Sans', sans-serif;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr 1fr;
   align-items: center;
-  justify-content: center;    
+  justify-content: center;
   padding: 25px;
   color: darkcyan;
 }
 
-.item-a .item-c .item-e{
+.item-a .item-c .item-e {
   grid-column: 1;
 }
 .item-b .item-d .item-f {
   grid-column: 2;
 }
-/*--- INFO PAGE ---*/
+/*--- SELING POINTS PAGE ---*/
+/*--- ABOUT PAGE ---*/
+.text-shadow {
+  text-shadow: 2px 2px 15px rgb(70, 70, 70);
+}
+.about-container {
+  font-family: 'Josefin Sans', sans-serif;
+}
+.about-intro{
+  color: white;
+  text-shadow: 2px 2px 15px rgb(70, 70, 70);
+  padding: 25px;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: url('./static/girl-t.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+.about-intro section {
+  margin-top: 22px;
+  font-size: 21px;
+  line-height: 1.1; 
+}
+
+.about-intro p {
+  background: rgba(255, 255, 255, 0.192);
+  padding: 20px;
+  border-radius: 15px;
+  font-weight: 300;
+  margin-top: 25px;
+  font-size: 15px;
+  line-height: 1.1;
+}
+
+.dev-des-title {
+  color: darkcyan;
+  font-weight: 700;
+  text-align: center;
+}
+
+.a-map-of-memories {
+  padding: 20px;
+  line-height: 1.3;
+}
+
+.dev-des h1 {
+  color: darkcyan;
+  font-size: 19px;
+  text-align: center;
+}
+.dev-des p {
+  font-size: 12px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.a-map-of-memories p {
+  font-weight: 300;
+}
+
+.a-map-of-memories h1 {
+  color: darkcyan;
+  font-weight: 500;
+  font-size: 25px;
+  text-align: center;
+}
+/*--- ABOUT PAGE ---*/
 .my-memories {
   font-family: 'Josefin Sans', sans-serif;
   text-align: center;
   color: rgb(93, 93, 93);
+}
+
+.dev-des {
+  padding: 10px;
 }
 
 .memory {
