--- a/src/App.css
+++ b/src/App.css
@@ -313,6 +313,14 @@ header nav ul li .a-link.active {
   color: white
 }
 
+.memory-p {
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+  font-weight: 100;
+  margin: 29px 0;
+  color: #fff;
+}
+
 .button_mem {
   text-align: center;
   width: 90vw;
