--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,12 @@
   outline: 1px solid red;
  } */
 
- hr.style-seven {
-  overflow: visible; /* For IE */
-  height: 30px;
-  border-style: solid;
-  border-color: black;
-  border-width: 1px 0 0 0;
-  border-radius: 20px;
+.style-seven {
+  height: 50px;
+  width: 100px;
+  background-color: #555;
 }
-hr.style-seven:before { /* Not really supposed to work, but does */
-  display: block;
-  content: "";
-  height: 30px;
-  margin-top: -31px;
-  border-style: solid;
-  border-color: black;
-  border-width: 0 0 1px 0;
-  border-radius: 20px;
-}
+
 
 html, body {
   font-family: 'Josefin Sans', sans-serif;
