--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,16 @@ html, body {
   background-size: cover;
 }
 
+.logo2 {
+  width: 175px;
+  margin-bottom: 70px;
+  height: 56px;
+  background: url('./static/huginn_text_white.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .logo:hover {
   color: rgb(190, 190, 190);
   text-decoration: none;
@@ -78,14 +88,14 @@ html, body {
 } */
 
 .form-add {
-  background-color: rgba(0, 139, 139, 0.8);
-  border-radius: 15px;
-  padding: 20px;
-  margin-bottom: 15px;
+  /* background-color: rgba(0, 139, 139, 0.8); */
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  margin: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+  padding: 5px;
+  color: #fff;
 }
 
 input {
@@ -134,7 +144,7 @@ form {
   /* background-color: darkcyan; */
   background: rgb(0,139,139);
   background: linear-gradient(0deg, rgba(0,139,139,0.8) 50%, rgba(19,136,103,0.8) 100%);
-  color: rgb(0, 0, 0);
+  color: #fff;
 }
 
 /* .login-page {
@@ -513,13 +523,17 @@ h6 + p {
 
 
 .back-btn {
-  color: rgb(0, 0, 0);
+  color: #fff;
+}
+.back-btn:hover {
+  background: rgb(184, 247, 255);
 }
 
 .save-btn {
+  color: #fff;
   width: 10vh;
   border: none;
-  background: none;
+
 }
 
 .save-btn:hover {
@@ -548,3 +562,16 @@ button {
   align-content: center;
   justify-content: flex-start;
 } */
+
+/*-- NEW ---*/
+.add-wrapper {
+  padding: 20px;
+  background: rgb(0,139,139);
+  background: linear-gradient(0deg, rgba(0,139,139,0.8) 50%, rgba(19,136,103,0.8) 100%);
+}
+
+.add-wrapper h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+  color: white;
+}
