--- a/src/App.css
+++ b/src/App.css
@@ -548,6 +548,14 @@ h6 + p {
   height: 30vh;
 }
 
+.fa-eye {
+  border: 1px solid darkcyan;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 20px;
+  color: darkcyan;
+}
+
 button {
   border: none;
   background: none;
