--- a/src/App.css
+++ b/src/App.css
@@ -221,6 +221,28 @@ form {
   text-decoration: none;
   color: #fff;
 }
+.sign-up-here {
+  color: rgb(196, 53, 143);
+}
+
+.add-cover-btn-2 {
+  text-align: center;
+  width: 150px;
+  border: none;
+  padding: 5px 10px;
+  font-size: 14px;
+  font-family: 'Josefin Sans', sans-serif;
+  border-radius: 10px;
+  background: MediumVioletRed;
+  color: #fff;
+  margin: 15px 0 5px 0;
+}
+
+.add-cover-btn-2:hover {
+  background: rgb(145, 15, 97);
+  text-decoration: none;
+  color: #fff;
+}
 
 .logout-btn {
   font-family: 'Josefin Sans', sans-serif;
@@ -267,6 +289,7 @@ form {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .quote {
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 200;
@@ -300,6 +323,7 @@ form {
 .my-places h2 {
   font-family: 'Josefin Sans', sans-serif;
   text-align: center;
+  font-size: 45px;
   font-weight: 100;
   margin: 29px 0;
   color: white
@@ -318,7 +342,7 @@ form {
   width: 90vw;
   margin-bottom: 15px;
   border-radius: 15px;
-  background-color: rgba(37, 128, 109, 0.377);
+  background-color: rgba(16, 136, 110, 0.507);
   padding: 10px;
   -webkit-box-shadow: 0px 14px 27px -12px rgba(0, 0, 0, 0.38);
   -moz-box-shadow: 0px 14px 27px -12px rgba(0, 0, 0, 0.38);
@@ -501,11 +525,18 @@ h6 + p {
 
 .date {
   color: lightslategray;
-  font-size: 10px;
+  font-size: 14px;
+}
+.mapped-place {
+  padding: 7px;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  background: rgba(24, 115, 131, 0.13);
 }
 
 .memory-ttl {
   padding: 10px;
+  font-size: 30px;
   font-weight: 300;
   color: cornflowerblue;
 }
@@ -529,12 +560,31 @@ h6 + p {
   background: rgb(184, 247, 255);
 }
 
-.save-btn {
-  color: #fff;
-  width: 10vh;
-  border: none;
+.label-with-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
 }
+
+.save-btn {
+  font-size: 28px;
+  color: rgb(255, 255, 255);
+  width: 10vh;
+  border: none;
+}
+
+.add-i-btn {
+  font-size: 28px;
+  color: rgb(255, 255, 255);
+  width: 10vh;
+  border: none;
+}
+.add-i-btn:hover {
+  color: rgb(142, 192, 185);
+}
+
 
 .save-btn:hover {
   width: 10vh;
@@ -544,8 +594,25 @@ h6 + p {
 }
 
 .description-field {
-  width: 50vh;
-  height: 30vh;
+  width: 100%;
+  height: 150px;
+  padding: 5px 5px;
+  box-sizing: border-box;
+  border: 3px solid darkcyan;
+  border-radius: 4px;
+}
+.text-field {
+  width: 100%;
+  padding: 5px 5px;
+  box-sizing: border-box;
+  border: 3px solid darkcyan;
+  border-radius: 4px;
+}
+.text-field-2 {
+  width: 280px;
+  box-sizing: border-box;
+  border: 3px solid darkcyan;
+  border-radius: 4px;
 }
 
 .fa-eye {
@@ -582,4 +649,21 @@ button {
   font-family: 'Josefin Sans', sans-serif;
   text-align: center;
   color: white;
+}
+
+.memories-by-city {
+  font-family: 'Josefin Sans', sans-serif;
+  padding: 15px;
+}
+
+.memories-by-city h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 200;
+  padding: 25px;
+}
+
+.memories-by-city strong {
+  margin: 0;
+  font-size: 29px;
+  color: darkcyan;
 }
